--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "jodit-react": "^5.2.19",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "zod": "^3.25.63"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
