--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^1.8.4",
     "jodit-react": "^5.2.19",
     "react": "^18.3.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.57.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
